--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "file-type": "^7.6.0",
     "glob": "7.1.1",
     "gm": "^1.23.1",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^5.1.0",
     "helmet": "^3.5.0",
     "i18n-2": "0.6.3",
     "log-timestamp": "latest",
@@ -33,7 +30,6 @@
     "moment": "^2.19.3",
     "morgan": "^1.9.1",
     "node-phantom-simple": "2.2.4",
-    "node-server-screenshot": "^0.2.1",
     "nodemailer": "^4.6.7",
     "phantomjs-prebuilt": "^2.1.16",
     "read-chunk": "^2.1.0",
@@ -44,18 +40,18 @@
     "serve-static": "^1.13.1",
     "slug": "^1.1.0",
     "sqlite3": "^4.0.0",
-    "tedious": "^5.0.3",
     "umzug": "^2.1.0",
     "underscore": "1.8.3",
     "uuid": "^3.2.1",
     "validator": "7.0.0",
-    "y18n": "^5.0.5",
-    "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
-    "trim-newlines": "3.0.1",
-    "glob-parent": "5.1.2",
-    "sass": "1.54.0",
     "ws": "3.3.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.0.2"
   },
   "main": "app.js",
   "description": "",
