--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -30,10 +30,10 @@ jobs:
           run: |
             npm install
 
-        - name: Build Style
-          run: |
-            gulp styles
-            rm -rvf node_modules/gulp*
+        # - name: Build Style
+        #   run: |
+        #     gulp styles
+        #     rm -rvf node_modules/gulp*
 
         - name: 'Build and push image'
           uses: docker/login-action@v1
