Fix security issues

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,26 +14,25 @@ jobs:
         - name: Set env
           run: echo "VERSIONED_IMAGE=${{ github.sha }}" >> $GITHUB_ENV
 
-        - name: Cache node modules
-          uses: actions/cache@v2
-          id: npm-cache
-          with:
-            path: node_modules
-            key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
+        # - name: Cache node modules
+        #   uses: actions/cache@v2
+        #   id: npm-cache
+        #   with:
+        #     path: node_modules
+        #     key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
 
         - uses: actions/setup-node@v3
           with:
             node-version: 14
 
         - name: Install Dependencies
-          if: steps.npm-cache.outputs.cache-hit != 'true'
           run: |
             npm install
 
-        # - name: Build Style
-        #   run: |
-        #     gulp styles
-        #     rm -rvf node_modules/gulp*
+        - name: Build Style
+          run: |
+            gulp styles
+            rm -rvf node_modules/gulp*
 
         - name: 'Build and push image'
           uses: docker/login-action@v1
