--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,7 +32,7 @@ jobs:
         - name: Build Style
           run: |
             gulp styles
-            rm -rvf node_modules/gulp*
+            rm -rvf node_modules/gulp* node_modules/scss-tokenizer node_modules/tar
 
         - name: 'Build and push image'
           uses: docker/login-action@v1
