--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uuid": "^3.2.1",
     "validator": "7.0.0",
     "lodash": "^4.17.21",
+    "ini": "^1.3.6",
     "ws": "3.3.1"
   },
   "devDependencies": {
